--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,13 +1,12 @@
 {% if site.google_analytics %}
 	<!-- Google Analytics -->
 		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-33194427-1"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-G1ZZ04TLK8"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
 		  gtag('js', new Date());
-
-		  gtag('config', 'UA-33194427-1');
+		  gtag('config', 'G-G1ZZ04TLK8');
 		</script>
 	<!-- End Google Analytics -->
 {% endif %}
