--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,6 +1,6 @@
 {% if site.google_analytics %}
 	<!-- Google Analytics -->
-		<!-- Google tag (gtag.js) -->
+		<!-- Google tag (gtag.js) Install the Google tag manually -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-G1ZZ04TLK8"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
