Revert "google analytics update"
This reverts commit 6c3610817ff6696e781d61ec05c3ba830af1340a.

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,20 +1,13 @@
 {% if site.google_analytics %}
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-H7737YJDKY"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+	<!-- Google Analytics -->
+		<!-- Google tag (gtag.js) Install the Google tag manually -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-G1ZZ04TLK8"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
 
-  gtag('config', 'G-H7737YJDKY');
-</script><!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-H7737YJDKY"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-H7737YJDKY');
-</script>
+		  gtag('config', 'G-G1ZZ04TLK8');
+		</script>
 	<!-- End Google Analytics -->
 {% endif %}
